# sovereign-shell

./: CONSTITUTION.md  Cargo.toml  LICENSE  PLAN.md  README.md  db.rs  debloat.ps1  indexer.rs  install-modules.ps1  lib (1).rs  main.js  main.rs  manifest.toml  style.css
modules/audio-router/: README.md  config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/audio-router/src/: app.js  index.html  style.css
modules/audio-router/src-tauri/: Cargo.toml  tauri.conf.json
modules/audio-router/src-tauri/src/: config.rs  devices.rs  events.rs  lib.rs  main.rs  monitor.rs  routing.rs  sessions.rs  volume.rs
modules/audio-router/src/components/: device-list.js  level-meters.js  session-mixer.js
modules/explorer/: README.md  config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/explorer/src/: app.js  index.html  style.css
modules/explorer/src-tauri/: Cargo.toml  tauri.conf.json
modules/explorer/src-tauri/src/: archive.rs  batch.rs  bookmarks.rs  config.rs  fs_ops.rs  fs_read.rs  lib.rs  main.rs  search_client.rs
modules/explorer/src/components/: breadcrumb.js  context-menu.js  file-list.js  preview.js  search-bar.js  sidebar.js  tab-bar.js  terminal.js
modules/explorer/src/utils/: drag-drop.js  keybindings.js
modules/launcher/: README.md  config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/launcher/src/: index.html  main.js  style.css
modules/launcher/src-tauri/: Cargo.toml  tauri.conf.json
modules/launcher/src-tauri/src/: calc.rs  config.rs  db.rs  icons.rs  main.rs  search.rs
modules/net-panel/: config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/net-panel/src/: app.js  index.html  style.css
modules/net-panel/src-tauri/: Cargo.toml  tauri.conf.json
modules/net-panel/src-tauri/src/: adapters.rs  config.rs  connections.rs  diagnostics.rs  dns.rs  firewall.rs  lib.rs  main.rs  monitor.rs
modules/net-panel/src/components/: adapter-list.js  bandwidth-graph.js  connection-table.js  diagnostics.js  firewall-rules.js
modules/notify-queue/: config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/notify-queue/src/: app.js  index.html  style.css
modules/notify-queue/src-tauri/: Cargo.toml  tauri.conf.json
modules/notify-queue/src-tauri/src/: config.rs  history.rs  ipc_server.rs  lib.rs  listener.rs  main.rs  queue.rs  rules.rs
modules/notify-queue/src/components/: history-search.js  queue-panel.js  rules-editor.js  toast.js
modules/search-daemon/: Cargo.toml  README.md  config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/search-daemon/src/: config.rs  db.rs  indexer.rs  ipc_server.rs  main.rs  watcher.rs
modules/task-monitor/: README.md  config.default.toml  install.ps1  manifest.toml  uninstall.ps1
modules/task-monitor/src/: app.js  index.html  style.css
modules/task-monitor/src-tauri/: Cargo.toml  tauri.conf.json
modules/task-monitor/src-tauri/src/: config.rs  file_locks.rs  lib.rs  main.rs  process_actions.rs  processes.rs  services.rs  system_stats.rs
modules/task-monitor/src/components/: file-lock-finder.js  process-table.js  process-tree.js  service-list.js  system-graphs.js
shared/config/: Cargo.toml
shared/config/src/: lib.rs
shared/ipc/: Cargo.toml
templates/: theme.css
