[workspace]
resolver = "2"
members = [
    "shared/config",
    "shared/ipc",
    "modules/launcher/src-tauri",
    "modules/search-daemon",
    "modules/explorer/src-tauri",
    "modules/task-monitor/src-tauri",
    "modules/audio-router/src-tauri",
    "modules/net-panel/src-tauri",
    "modules/notify-queue/src-tauri",
]
