[package]
name = "sovereign-search-daemon"
version = "0.1.0"
edition = "2021"
description = "Headless file indexing and search daemon replacing Windows Search"

[[bin]]
name = "sovereign-search-daemon"
path = "src/main.rs"

[dependencies]
sovereign_config = { path = "../../shared/config" }
sovereign_ipc = { path = "../../shared/ipc" }
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
