[package]
name = "sovereign_ipc"
version = "0.1.0"
edition = "2021"
description = "Named pipe IPC library for Sovereign Shell inter-module communication"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
