[package]
name = "sovereign-audio-router"
version = "0.1.0"
edition = "2021"
description = "Per-application audio routing and volume control replacing Windows Volume Mixer"

[lib]
name = "sovereign_audio_router_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sovereign_config = { path = "../../../shared/config" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
] }
window-vibrancy = "0.5"
