[package]
name = "sovereign-launcher"
version = "0.1.0"
edition = "2021"
description = "Keyboard-driven app launcher replacing the Windows Start Menu"

[dependencies]
sovereign_config = { path = "../../../shared/config" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
