[package]
name = "sovereign-notify-queue"
version = "0.1.0"
edition = "2021"
description = "Sovereign Shell — Notification Queue"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sovereign_config = { path = "../../../shared/config" }
sovereign_ipc = { path = "../../../shared/ipc" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "UI_Notifications_Management",
] }
